# wenkokke.github.io

./: .gitignore  .htmlvalidate.json  404.html  Buildfile.hs  CNAME  Gemfile  Makefile  TODO.md  cabal.project  cabal.project.ci.local  cabal.project.local  hie.yaml  index.html  package.json  recipes.html  rss.xml  site.hs  site.yml  stack.yaml  wenkokke.cabal
.githooks/: pre-commit
.github/workflows/: ci.yml
Buildfile/: Publications.hs  Pubs.hs
_cache/: .shake.database
_cache/stage1/posts/: 2016-03-01-insertion-sort-in-agda.md  2016-03-20-one-lambda-calculus-many-times.md  Algebra.Consequences.Propositional.html  Algebra.Consequences.Setoid.html  Algebra.Construct.LiftedChoice.html  Algebra.Construct.NaturalChoice.Max.html  Algebra.Construct.NaturalChoice.Min.html  Algebra.Construct.NaturalChoice.MinOp.html  Algebra.Morphism.Structures.html  Algebra.Morphism.html  Algebra.Properties.BooleanAlgebra.html  Algebra.Properties.DistributiveLattice.html  Algebra.Properties.Lattice.html  Algebra.Structures.Biased.html  Category.Applicative.Indexed.html  Data.Bool.Properties.html  Data.Fin.Base.html  Data.Fin.Properties.html  Data.List.Base.html  Data.List.Categorical.html  Data.List.Extrema.Core.html  Data.List.Extrema.html  Data.List.Membership.Propositional.Properties.Core.html  Data.List.Membership.Propositional.Properties.html  Data.List.Membership.Setoid.Properties.html  Data.List.Membership.Setoid.html  Data.List.Properties.html  Data.List.Relation.Binary.Equality.Propositional.html  Data.List.Relation.Binary.Equality.Setoid.html  Data.List.Relation.Binary.Pointwise.Base.html  (+71 more)
_production/site/: 404.html  index.html  rss.xml
_site/: 404.html  index.html  rss.xml
_site/recipes/: index.html
assets/css/: a-tale-of-three-constructed-languages.css  agda.css  highlight.css  katex.min.css  mathpar.css  neural-networks-with-cube-cats.css  recipes.css  style.css
assets/images/: toki-pona.kra
bib/: 2020-12-24-a-tale-of-three-constructed-languages.bib  pubs.bib  sources.bib
bib/auto/: pubs.el
bib/drafts/: 2020-12-24-a-tale-of-three-constructed-languages.bib
blag/Blag/: Agda.hs  Routing.hs  Template.hs
csl/: chicago-author-date.csl  pubs.csl
css/: 0-poole.css  1-hyde.css  1.0-poole.css  1.1-hyde.css  cube-cats.css  hyde.css  katex.min.css  litterae-ignotae.css  papergirls.css  poole.css  solresol.css  tengwar.css
cv/: Makefile  academic-p1sidebar.tex  academic-p2sidebar.tex  academic-p3sidebar.tex  academic.tex  activities.tex  altacv.cls  education.tex  experience.tex  grants-and-awards.tex  publications.tex  referees.tex  service.tex  teaching.tex
docs/: 404.html  rss.xml
docs/pages/: pubs.html
docs/posts/: 2016-03-20-one-lambda-calculus-many-times.html  2018-12-09-paper-girls-substitution-ciphers-and-frequency-analysis.html
drafts/: 2020-09-24-an-introduction-to-session-types.html  2020-09-24-an-introduction-to-session-types.md  2020-12-24-a-tale-of-three-constructed-languages.html  2020-12-24-a-tale-of-three-constructed-languages.md
pages/: pubs.bib  pubs.csl  pubs.html  pubs.md  recipes.html
posts/: 2016-03-01-insertion-sort-in-agda.agdai  2016-03-01-insertion-sort-in-agda.html  2016-03-01-insertion-sort-in-agda.lagda.md  2016-03-09-side-effects-in-english.cabal  2016-03-09-side-effects-in-english.html  2016-03-09-side-effects-in-english.md  2016-03-16-constraint-grammar-can-count.html  2016-03-16-constraint-grammar-can-count.md  2016-03-20-one-lambda-calculus-many-times.agdai  2016-03-20-one-lambda-calculus-many-times.html  2016-03-20-one-lambda-calculus-many-times.lagda.md  2016-03-21-breadboxes-and-distributional-semantics.html  2016-03-21-breadboxes-and-distributional-semantics.md  2016-04-05-presidents-scumbags-kings-and-arseholes-and-the-great-dalmuti.html  2016-04-05-presidents-scumbags-kings-and-arseholes-and-the-great-dalmuti.md  2017-05-15-visl-cg-3-is-the-new-assembler.html  2017-05-15-visl-cg-3-is-the-new-assembler.md  2018-12-09-paper-girls-substitution-ciphers-and-frequency-analysis.html  2018-12-09-paper-girls-substitution-ciphers-and-frequency-analysis.md  2020-09-12-neural-networks-with-cube-cats.html  2020-09-12-neural-networks-with-cube-cats.md  2020-12-17-an-introduction-to-session-types.html  2020-12-17-an-introduction-to-session-types.md  2021-06-15-a-tale-of-three-constructed-languages.html  2021-06-15-a-tale-of-three-constructed-languages.md  2022-01-31-normalization-by-evaluation.lhs  2022-01-31-normalization-by-evaluation.md
posts/2016-03-09-side-effects-in-english/: side-effects-in-english.cabal
posts/2022-01-31-normalization-by-evaluation/: normalization-by-evaluation.cabal
posts/drafts/: 2020-12-24-a-tale-of-three-constructed-languages.html  2020-12-24-a-tale-of-three-constructed-languages.md
public/css/: style.css
pubs/: index.html
recipes/: broccoli-puffs.html  broccoli-puffs.md  cheesecake.html  cheesecake.md  feijao-tropeiro.html  feijao-tropeiro.md  feijoada.html  feijoada.md  index.html  mapo-tofu.html  mapo-tofu.md  muhammara.html  muhammara.md  spaghetti-alla-puttanesca.html  spaghetti-alla-puttanesca.md  spaghetti-and-meatballs.html  spaghetti-and-meatballs.md  sweet-potato-black-bean-enchiladas.html  sweet-potato-black-bean-enchiladas.md  tofu-katsu-curry.html  tofu-katsu-curry.md
recipes/broccoli-puffs/: index.html
recipes/cheesecake/: index.html
recipes/feijao-tropeiro/: index.html
recipes/feijoada/: index.html
recipes/mapo-tofu/: index.html
recipes/muhammara/: index.html
recipes/spaghetti-alla-puttanesca/: index.html
recipes/spaghetti-and-meatballs/: index.html
recipes/sweet-potato-black-bean-enchiladas/: index.html
recipes/tofu-katsu-curry/: index.html
sass/: a-tale-of-three-constructed-languages.scss  style.scss
sass/a-tale-of-three-constructed-languages/: tengwar.css
sass/katex/: mathpar.css
sass/posts/: a-tale-of-three-constructed-languages.scss  neural-networks-with-cube-cats.scss  paper-girls-substitution-ciphers-and-frequency-analysis.scss
sass/theme/: fonts.css  poole.css
templates/: default.html  head.html  page.html  post.html  recipe.html  sidebar.html
(+76 files in other folders)
