cabal-version: 2.4
name:          wenkokke
version:       0.1.0.0
synopsis:      Personal website of Wen Kokke
homepage:      https://wen.works
bug-reports:   https://github.com/wenkokke/wenkokke.github.io/issues
license:
author:        Wen Kokke
maintainer:    wenkokke@users.noreply.github.com
copyright:     © 2016—2022 Wen Kokke
category:      Web
build-type:    Simple
tested-with:   GHC ==8.10.7

flag install-agda
  description: Install Agda using Cabal
  manual:      True
  default:     False

common install-agda
  if flag(install-agda)
    build-depends: Agda ==2.6.2.1
    cpp-options:   -DinstallAgda

common language-haskell
  default-language:   Haskell2010
  build-depends:      base
  default-extensions:
    FlexibleContexts
    FlexibleInstances
    ImplicitParams
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    Strict
    TupleSections
    TypeApplications
    TypeSynonymInstances

executable builder
  import:        language-haskell
  main-is:       Buildfile.hs
  build-depends:
    , blag
    , citeproc
    , containers
    , data-default-class
    , multimap
    , process
    , shake
    , temporary
    , text
    , text-icu            ^>=0.7.1.0

library blag
  import:          language-haskell, install-agda
  hs-source-dirs:  blag
  exposed-modules:
    Blag.Agda
    Blag.PostInfo
    Blag.Prelude
    Blag.Prelude.ByteString
    Blag.Routing
    Blag.Style.CSS
    Blag.Style.Sass
    Blag.Template
    Blag.Template.Pandoc
    Blag.Template.Pandoc.Builder
    Blag.Template.Pandoc.Citeproc
    Blag.Template.TagSoup

  other-modules:
    Blag.Prelude.FilePath
    Blag.Prelude.Url
    Blag.Template.Metadata
    Blag.Template.Pandoc.Postprocess
    Blag.Template.Pandoc.Url
    Blag.Template.Template

  build-depends:
    , aeson
    , bimap
    , bytestring
    , charsetdetect
    , citeproc
    , containers
    , directory
    , doclayout
    , filemanip             ^>=0.3
    , filepath
    , frontmatter
    , hasmin
    , hsass                 >=0.3.0
    , mtl
    , pandoc
    , pandoc-types
    , shake
    , tagsoup
    , text
    , text-icu              ^>=0.7.1.0
    , text-regex-replace
    , time
    , unordered-containers
    , vector
    , yaml
