cabal-version: 2.4
name:          wenkokke
version:       0.1.0.0
synopsis:      Personal website of Wen Kokke
homepage:      https://wen.works
bug-reports:   https://github.com/wenkokke/wenkokke.github.io/issues
license:
author:        Wen Kokke
maintainer:    wenkokke@users.noreply.github.com
copyright:     © 2016—2022 Wen Kokke
category:      Web
build-type:    Simple
tested-with:   GHC ==8.10.7

flag install-agda
  description: Install Agda using Cabal
  manual:      True
  default:     False

common install-agda
  if flag(install-agda)
    build-depends: Agda ==2.6.2.1
    cpp-options:   -DinstallAgda

common language-haskell
  default-language:   Haskell2010
  build-depends:      base
  default-extensions:
    FlexibleContexts
    FlexibleInstances
    ImplicitParams
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    Strict
    TupleSections
    TypeApplications
    TypeSynonymInstances

executable builder
  import:        language-haskell
  main-is:       Buildfile.hs
  other-modules: Buildfile.Publications
  build-depends:
    , citeproc
    , containers
    , data-default-class
    , multimap
    , process
    , shake
    , shoggoth-agda
    , shoggoth-core
    , shoggoth-hasmin
    , shoggoth-sass
    , temporary
    , text
    , text-icu            ^>=0.7.1.0

library shoggoth-agda
  import:          language-haskell, install-agda
  hs-source-dirs:  shoggoth/agda
  exposed-modules: Shoggoth.Agda
  build-depends:
    , containers
    , directory
    , shoggoth-core
    , text
    , text-icu            ^>=0.7.1.0
    , text-regex-replace

library shoggoth-core
  import:          language-haskell
  hs-source-dirs:  shoggoth/core shoggoth/agda
  exposed-modules:
    Shoggoth.PostInfo
    Shoggoth.Prelude
    Shoggoth.Prelude.ByteString
    Shoggoth.Routing
    Shoggoth.Template
    Shoggoth.Template.Pandoc
    Shoggoth.Template.Pandoc.Builder
    Shoggoth.Template.Pandoc.Citeproc
    Shoggoth.Template.TagSoup

  other-modules:
    Shoggoth.Prelude.FilePath
    Shoggoth.Prelude.Url
    Shoggoth.Template.Metadata
    Shoggoth.Template.Pandoc.Postprocess
    Shoggoth.Template.Pandoc.Url
    Shoggoth.Template.Template

  build-depends:
    , aeson
    , bimap
    , bytestring
    , charsetdetect
    , citeproc
    , containers
    , directory
    , doclayout
    , filemanip             ^>=0.3
    , filepath
    , frontmatter
    , mtl
    , pandoc
    , pandoc-types
    , shake
    , tagsoup
    , text
    , text-icu              ^>=0.7.1.0
    , text-regex-replace
    , time
    , unordered-containers
    , vector
    , yaml

library shoggoth-hasmin
  import:          language-haskell
  hs-source-dirs:  shoggoth/hasmin
  exposed-modules: Shoggoth.Style.Css.Hasmin
  build-depends:
    , hasmin
    , shoggoth-core
    , text

library shoggoth-sass
  import:          language-haskell
  hs-source-dirs:  shoggoth/sass
  exposed-modules: Shoggoth.Style.Sass
  build-depends:
    , directory
    , hsass          >=0.3.0
    , shoggoth-core
    , text